--- a/styles.css
+++ b/styles.css
@@ -5,11 +5,13 @@ body{
     color: white;
 }
 header{
+    margin: 0 auto;
     display: flex;
     justify-content: space-between;
     align-items: center;
     padding: 0px 50px;
     border: 1px solid white;
+    width: 500px;
 }
 #scoreboard{
     display: flex;
